--- a/config.example.yml
+++ b/config.example.yml
@@ -13,3 +13,9 @@ http:
   host: "0.0.0.0"
   port: 8080
 
+logging:
+  filePath: "../../logs/"
+  encoding: "json"
+  level: "debug"
+  logger: "zap"
+    
