--- a/config.example.yml
+++ b/config.example.yml
@@ -18,4 +18,7 @@ logging:
   encoding: "json"
   level: "debug"
   logger: "zap"
-    
+        
+jwt:
+  secret_key: "supersecretkey1234567890abcdefghijklmnopqrstuvwxyz!"
+  expire_minutes: 60
